--- a/AutoHostfileLib/AutoHostfileLib.csproj
+++ b/AutoHostfileLib/AutoHostfileLib.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Debouncer.cs" />
     <Compile Include="EventHandler.cs" />
