--- a/AutoHostfileService/AutoHostfileService.csproj
+++ b/AutoHostfileService/AutoHostfileService.csproj
@@ -63,6 +63,9 @@
     </Compile>
     <Compile Include="ServiceMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
