--- a/AutoHostfileSettings/AutoHostfileSettings.csproj
+++ b/AutoHostfileSettings/AutoHostfileSettings.csproj
@@ -72,6 +72,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\CommonAssemblyInfo.cs" />
     <EmbeddedResource Include="AutoHostfileSettings.resx">
       <DependentUpon>AutoHostfileSettings.cs</DependentUpon>
     </EmbeddedResource>
